# dreamydormouse

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.simple  Dockerfile.slim  README-SIMPLE.md  README.md  check-deps.sh  docker-compose.simple.yml  docker-compose.yml  main-simple.py  main.py  pyproject.toml
.github/workflows/: docker-build.yml  docker-publish.yml
