[project]
name = "dreamydormouse"
version = "0.1.0"
description = "RAG system for querying Markdown files"
readme = "README.md"
requires-python = ">=3.12"

# Simplified dependencies - let lightrag-hku pull what it needs
dependencies = [
    "python-dotenv>=1.0.0",
    "lightrag-hku>=1.4.0",
    "raganything>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

