[project]
name = "dreamydormouse"
version = "0.1.0"
description = "RAG system for querying Markdown files"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "python-dotenv>=1.0.0",
    "lightrag-hku>=1.4.0",
    "raganything>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatchling where to find the code
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]

